--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
 
     "autoload": {
         "psr-4": {
-            "DesignPatterns\\Factory\\": "patterns/01_Factory/src"
+            "DesignPatterns\\Factory\\": "patterns/01_Factory/src",
+            "DesignPatterns\\Builder\\": "patterns/02_Builder/src"
         }
     }
 }
