--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
 
     "autoload": {
         "psr-4": {
-            "DesignPatterns\\Factory\\": "patterns/01_Factory/src",
-            "DesignPatterns\\Builder\\": "patterns/02_Builder/src"
+            "DesignPatterns\\Factory\\":             "patterns/01_Factory/src",
+            "DesignPatterns\\Builder\\":             "patterns/02_Builder/src",
+            "DesignPatterns\\DependencyInjection\\": "patterns/03_Dependency_Injection/src",
         }
     }
 }
