Partitioning Value Object to three different patterns

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
             "DesignPatterns\\Factory\\":             "patterns/01_Factory/src",
             "DesignPatterns\\Builder\\":             "patterns/02_Builder/src",
             "DesignPatterns\\DependencyInjection\\": "patterns/03_Dependency_Injection/src",
-            "DesignPatterns\\ValueObject\\":         "patterns/04_Value_Object/src"
+            "DesignPatterns\\ValueObject\\":         "patterns/04_Value_Object/src",
+            "DesignPatterns\\NamedConstructor\\":    "patterns/05_Named_Constructor/src",
+            "DesignPatterns\\Immutability\\":        "patterns/06_Immutability/src"
         }
     }
 }
