Adding Decorator Pattern example

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
             "DesignPatterns\\DependencyInjection\\": "patterns/03_Dependency_Injection/src",
             "DesignPatterns\\ValueObject\\":         "patterns/04_Value_Object/src",
             "DesignPatterns\\NamedConstructor\\":    "patterns/05_Named_Constructors/src",
-            "DesignPatterns\\Immutability\\":        "patterns/06_Immutability/src"
+            "DesignPatterns\\Immutability\\":        "patterns/06_Immutability/src",
+            "DesignPatterns\\Decorator\\":           "patterns/07_Decorator/src"
         }
     }
 }
