Configuring tests and autoloader

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
             "DesignPatterns\\ValueObject\\":         "patterns/04_Value_Object/src",
             "DesignPatterns\\NamedConstructor\\":    "patterns/05_Named_Constructors/src",
             "DesignPatterns\\Immutability\\":        "patterns/06_Immutability/src",
-            "DesignPatterns\\Decorator\\":           "patterns/07_Decorator/src"
+            "DesignPatterns\\Decorator\\":           "patterns/07_Decorator/src",
+            "DesignPatterns\\Memento\\":             "patterns/08_Memento/src"
         }
     }
 }
