Adding Observer scaffolding

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
             "DesignPatterns\\Immutability\\":        "patterns/06_Immutability/src",
             "DesignPatterns\\Decorator\\":           "patterns/07_Decorator/src",
             "DesignPatterns\\Memento\\":             "patterns/08_Memento/src",
-            "DesignPatterns\\PubSub\\":              "patterns/09_PubSub/src"
+            "DesignPatterns\\PubSub\\":              "patterns/09_PubSub/src",
+            "DesignPatterns\\Observer\\":            "patterns/10_Observer/src"
         }
     }
 }
