--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
             "DesignPatterns\\Memento\\":             "patterns/08_Memento/src",
             "DesignPatterns\\PubSub\\":              "patterns/09_PubSub/src",
             "DesignPatterns\\Observer\\":            "patterns/10_Observer/src",
-            "DesignPatterns\\Visitor\\":             "patterns/11_Visitor/src"
+            "DesignPatterns\\Visitor\\":             "patterns/11_Visitor/src",
+            "DesignPatterns\\Facade\\":              "patterns/12_Facade/src"
         }
     }
 }
