--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
             "DesignPatterns\\Visitor\\":             "patterns/11_Visitor/src",
             "DesignPatterns\\Facade\\":              "patterns/12_Facade/src",
             "DesignPatterns\\Adapter\\":             "patterns/13_Adapter/src",
-            "DesignPatterns\\Prototype\\":           "patterns/14_Prototype/src"
+            "DesignPatterns\\Prototype\\":           "patterns/14_Prototype/src",
+            "DesignPatterns\\Prototype\\":           "patterns/15_Null_Object/src"
         }
     }
 }
