--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
 
     "require": {
-        "phpunit/phpunit": "~4.7.7"
+        "phpunit/phpunit": "4.8.* | 5.1.*"
     },
 
     "autoload": {
